force-app/main/default/objects/OrderRequestPricebook__mdt/OrderRequestPricebook__mdt.object-meta.xml
<CustomObject>
    <label>OrderRequestPricebook</label>
    <pluralLabel>OrderRequestPricebooks</pluralLabel>
</CustomObject>