force-app/main/default/objects/OrderRequestPricebook__mdt/fields/OverridePricebook__c.field-meta.xml
<CustomField>
    <fullName>OverridePricebook__c</fullName>
    <label>Override Pricebook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>