force-app/main/default/objects/OrderRequestPricebook__mdt/fields/Usefollowuppricebook__c.field-meta.xml
<CustomField>
    <fullName>Usefollowuppricebook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use follow up pricebook</label>
    <type>Checkbox</type>
</CustomField>