force-app/main/default/objects/OrderRequestPricebook__mdt/fields/UseOrverridepricebook__c.field-meta.xml
<CustomField>
    <fullName>UseOrverridepricebook__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Orverride pricebook</label>
    <type>Checkbox</type>
</CustomField>