force-app/main/default/objects/OrderRequestPricebook__mdt/listViews/All2.listView-meta.xml
<ListView>
    <fullName>All2</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>OperatingCompany__c</columns>
    <columns>Pricebook__c</columns>
    <filterScope>Everything</filterScope>
    <label>All2</label>
    <language>en_US</language>
</ListView>